--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,11 @@ pyhumps = ">=1.3.*"
 fastapi = ">=0.42.*"
 uvicorn = ">=0.10.*"
 pytest = ">=5.2.*"
+marshmallow = "==3.14.1"
+sqlalchemy==1.4.46
+openpyxl==3.0.10
+lxml
+urllib
 
 [requires]
 python_version = "3.9"
