--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-
 # OS generated files #
 ######################
 .DS_Store
@@ -14,3 +12,8 @@ db.*
 ######################
 *.env
 **/.pytest**
+.idea/
+node_modules
+dumps/
+docker/
+docker-compose.yaml
