--- a/Pipfile
+++ b/Pipfile
@@ -17,10 +17,9 @@ fastapi = ">=0.42.*"
 uvicorn = ">=0.10.*"
 pytest = ">=5.2.*"
 marshmallow = "==3.14.1"
-sqlalchemy==1.4.46
-openpyxl==3.0.10
-lxml
-urllib
+sqlalchemy = "==1.4.46"
+openpyxl = "==3.0.10"
+lxml = "*"
 
 [requires]
 python_version = "3.9"
