--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,8 @@
-# fastapi[all]
-# fastapi-users[sqlalchemy]
-# alembic
-# psycopg2-binary
-# # python-dotenv
-# envparse==0.2.0
-# sqlalchemy
-
-envparse==0.2.0
 fastapi==0.88.0
 uvicorn==0.20.0
 SQLAlchemy==1.4.45
 pydantic[email]
+envparse==0.2.0
 psycopg2-binary==2.9.5
 asyncpg==0.27.0
 alembic==1.9.0
@@ -24,3 +16,4 @@ python-multipart==0.0.5
 bcrypt==4.0.1
 greenlet==2.0.2
 sentry-sdk[fastapi]
+pydantic-gen
